# ocr-compare

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  organize_math_books.sh  organize_math_books_advanced.py  organize_math_books_complete.py  pyproject.toml  setup.py  setup_helpers.ipynb
examples/: basic_usage.py  cached_ocr_example.py  gdai_example.py  ocr_comparison.py  simple_cached_ocr.py
examples/configs/: gdai_config_example.json  tesseract_config_example.json
examples/storage_configs/: local_storage.json
scripts/: README_images_to_category_pdfs.md  README_mistral_ocr.md  README_mistral_ocr_refactored.md  docling_examples.py  docling_smol_examples.py  example_mistral_ocr.py  example_usage.py  images_to_category_pdfs.py  mistral_ocr.py  mistral_ocr_refactored copy.py  mistral_ocr_refactored.py  run_numero_source.py  toc_parsing_langraph.py
scripts/numero_source/: README.md  __init__.py  pipeline.py  schemas.py
scripts/numero_source/ocr/: __init__.py  mistral_ocr.py
scripts/numero_source/processors/: __init__.py  cover.py  intro.py
scripts/numero_source/toc/: __init__.py  models.py  parser.py
scripts/prompts/: build-organize-script-prompt.txt
src/ocrtool/: __init__.py  cached_ocr.py  ocr.py
src/ocrtool/canonical_ocr/: ocr_schema.py
src/ocrtool/document_scanner/: README.md  __init__.py  document_scanner.py
src/ocrtool/ocr_impls/: __init__.py  cached_ocr_executor.py  ocr_executor.py  ocr_factory.py
src/ocrtool/page_limit/: README.md  __init__.py  exceptions.py  limits.py  page_count.py  (+1 more)
tests/page_limit/: test_page_limit_handler.py
(+18 files in other folders)
